--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "swr": "^2.2.5",
     "tabler-icons-react": "^1.56.0",
