--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.23.12",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
@@ -32,6 +34,7 @@
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^6.27.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
